<!--
  ~ Copyright (c) Traksity 2019.
  ~ Written by beratalp
  -->

<resources>
    <string name="app_name">Bilkent SRS</string>
    <string name="id">Bilkent ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="version">Version</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">There is no internet connection.</string>
    <string name="ok">OK</string>
    <string name="wrong_id_or_password">Wrong password or Bilkent ID number.</string>
    <string name="enter_sms">Please enter the verification code sent from Bilkent.</string>
    <string name="no_verification_entered">Please enter a verification code.</string>
</resources>
