<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/LoginTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <GridLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:rowCount="4"
        android:columnCount="1">
        <EditText
            android:hint="@string/id"
            android:autofillHints="username"
            android:layout_width="match_parent"
            android:inputType="text"
            android:id="@+id/username_input"/>
        <EditText
            android:hint="@string/password"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>
        <CheckBox
            android:id="@+id/remember_checkbox"
            android:text="@string/remember_me"/>
        <Button
            android:id="@+id/login_button"
            android:text="@string/login"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/version_info"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>